# qdox

./: Makefile  README.md  pyproject.toml  qdox.py  quickdocs.css  quickdocs.py  read.py  requirements.txt
.github/workflows/: validate-main.yaml
docs/: index.html
src/qdox/: __init__.py  main.py
