[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tools.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
qdox = ["*.py","*.css"]

[project]
name = "qdox"
version = "0.0.0a4"
description = "Generate quick documentation for a Python project on GitHub"
authors = [
    {name = "David P. Chassin <dpchassin@gmail.com>"},
    ]
maintainers = [
    {name = "David P. Chassin <dpchassin@gmail.com>"},
    ]
readme = "README.md"
requires-python = ">= 3.11"
dependencies = ["requests","tomli"]
keywords = ["github","python","documentation"]
license = {text="MIT License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    ]

[project.urls]
Homepage = "https://github.com/eudoxys/qdox"
Documentation = "https://www.eudoxys.com/qdox"
Repository = "https://github.com/eudoxys/qdox.git"
Issues = "https://github.com/eudoxys/qdox/issues"

[project.scripts]
qdox = "qdox.main:main"
